[package]
name = "env_monitor"
version = "0.1.0"
edition = "2024"
authors = ["zccccc01 <1351688749@qq.com>"]
description = """
Raspberry Pi hardware interface for:
- DHT11 temperature & humidity sensor
- Flame detection sensor with buzzer alarm
Provides both synchronous and async Tokio interfaces
"""
repository = "https://github.com/zccccc01/env_monitor"
documentation = "https://docs.rs/env_monitor"
readme = "README.md"
keywords = ["raspberry-pi", "sensors", "dht11", "iot", "temperature"]
categories = ["hardware-support", "embedded"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
rppal = "0.22.1"
async-trait = "0.1.88"

[[example]]
name = "env_monitor_example"
path = "src/examples/env_monitor_example.rs"
